BuildHughes/translation-tool/inputs/source_meta/objects/HSvc_DETSValue__c.object
<CustomObject>
    <description>Contains list of DETS Values. Maps to PS_HNS_DETS_VALUES.</description>
    <fields>
        <fullName>HSvc_DETSFIELDSID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DETS Field Id</label>
        <referenceTo>HSvc_DETSField__c</referenceTo>
        <relationshipName>DETS_Values</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSVALUESID__c</fullName>
        <externalId>true</externalId>
        <label>DETS Values Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HSvc_DETSVALUE__c</fullName>
        <label>DETSVALUE</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>DETS Value</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>HSvc_DETSFIELDSID__c</columns>
        <columns>HSvc_DETSVALUE__c</columns>
        <columns>HSvc_DETSVALUESID__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>DETS Values</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DETS Values</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>